<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.reactive-toolbox</groupId>
    <artifactId>reactive-toolbox-parent</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <modules>
        <module>core</module>
        <module>http</module>
        <module>async-io-native</module>
    </modules>

    <packaging>pom</packaging>

    <name>Reactive Toolbox</name>
    <description>Set of libraries for reactive services</description>
    <url>http://www.reactive-toolbox.org</url>

    <scm>
        <url>https://github.com/siy/reactive-toolbox.git</url>
        <connection>scm:git:ssh://git@github.com/siy/reactive-toolbox.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/siy/reactive-toolbox.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.release>14</java.release>
        <java.enable-preview>--enable-preview</java.enable-preview>

        <!-- Dependencies versions -->
        <netty.version>4.1.42.Final</netty.version>

        <!-- Testing -->
        <junit.version>5.6.2</junit.version>
        <junit.params.version>5.3.1</junit.params.version>
        <junit.platform.version>1.6.2</junit.platform.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.reactive-toolbox</groupId>
                <artifactId>core</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.reactive-toolbox</groupId>
                <artifactId>http</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-all</artifactId>
                <version>${netty.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Toolbox-wide dependencies -->
        <!-- Logging -->

        <!-- Testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.vintage</groupId>
            <artifactId>junit-vintage-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-launcher</artifactId>
            <version>${junit.platform.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit.params.version}</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.5</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <propertyName>jaCoCoArgLine</propertyName>
                        </configuration>
                    </execution>
                    <!-- attached to Maven test phase -->
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M4</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                        --add-opens org.reactivetoolbox.core/org.reactivetoolbox.core.examples.async=ALL-UNNAMED
                        --add-opens org.reactivetoolbox.core/org.reactivetoolbox.core.async=ALL-UNNAMED
                        --add-opens org.reactivetoolbox.core/org.reactivetoolbox.core.scheduler=ALL-UNNAMED
                        --add-opens org.reactivetoolbox.core/org.reactivetoolbox.core.scheduler.impl=ALL-UNNAMED
                        --add-opens org.reactivetoolbox.core/org.reactivetoolbox.core.lang=ALL-UNNAMED
                        --add-opens org.reactivetoolbox.core/org.reactivetoolbox.core.lang.support=ALL-UNNAMED
                        --add-opens org.reactivetoolbox.http/org.reactivetoolbox.codec=ALL-UNNAMED
                        --add-opens org.reactivetoolbox.http/org.reactivetoolbox.codec.json=ALL-UNNAMED
                        --add-opens org.reactivetoolbox.http/org.reactivetoolbox.net.http=ALL-UNNAMED
                        --add-opens org.reactivetoolbox.http/org.reactivetoolbox.net.http.server=ALL-UNNAMED
                        --add-opens org.reactivetoolbox.http/org.reactivetoolbox.net.http.server.router=ALL-UNNAMED
                        --add-opens org.reactivetoolbox.http/org.reactivetoolbox.net.http.server.router.impl=ALL-UNNAMED
                        --add-opens org.reactivetoolbox.http/org.reactivetoolbox.net.http.server.netty=ALL-UNNAMED
                        --add-opens org.reactivetoolbox.io.uring/org.reactivetoolbox.io=ALL-UNNAMED
                        --add-opens org.reactivetoolbox.io.uring/org.reactivetoolbox.io.raw=ALL-UNNAMED
                        --add-opens org.reactivetoolbox.io.uring/org.reactivetoolbox.io.uring=ALL-UNNAMED
                        --add-opens java.base/jdk.internal.misc=org.reactivetoolbox.io.uring,ALL-UNNAMED
                        ${jaCoCoArgLine}
                        ${java.enable-preview}
                        -Xmx1024m
                    </argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <generateBackupPoms>false</generateBackupPoms>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <showDeprecation>true</showDeprecation>
                    <showWarnings>true</showWarnings>
<!--                    <release>${java.release}</release>-->
                    <source>14</source>
                    <target>14</target>
                    <compilerArgs>
                        <arg>${java.enable-preview}</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.22.1</version>
            </plugin>
        </plugins>
    </build>
</project>
